# pdfboss

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yaml  python-ci.yml  release-please.yaml
benchmarks/: README.md  bench.py  results.json
crates/pdfboss-cli/: Cargo.toml
crates/pdfboss-cli/src/: main.rs  pretty.rs
crates/pdfboss-cli/tests/: cli.rs
crates/pdfboss-core/: Cargo.toml
crates/pdfboss-core/benches/: parse.rs
crates/pdfboss-core/src/: content.rs  crypt.rs  document.rs  error.rs  geom.rs  hash.rs  lexer.rs  lib.rs  object.rs  objstm.rs  parser.rs  xref.rs
crates/pdfboss-core/src/filters/: ascii85.rs  ascii_hex.rs  flate.rs  lzw.rs  mod.rs  predictor.rs  run_length.rs
crates/pdfboss-core/tests/: fixtures.rs
crates/pdfboss-encoding/: Cargo.toml
crates/pdfboss-encoding/src/: afm.rs  lib.rs
crates/pdfboss-py/: Cargo.toml
crates/pdfboss-py/src/: lib.rs
crates/pdfboss-render/: Cargo.toml
crates/pdfboss-render/assets/fonts/: NOTICE
crates/pdfboss-render/benches/: render.rs  tiers.rs
crates/pdfboss-render/src/: cff.rs  color.rs  executor.rs  glyph.rs  image.rs  lib.rs  path.rs  raster.rs  stroke.rs  substitute.rs  truetype.rs  type1.rs  type3.rs
crates/pdfboss-testkit/: Cargo.toml
crates/pdfboss-testkit/examples/: gen_fixtures.rs
crates/pdfboss-testkit/src/: lib.rs
crates/pdfboss-text/: Cargo.toml
crates/pdfboss-text/benches/: extract.rs
crates/pdfboss-text/src/: cmap.rs  encodings.rs  extract.rs  font.rs  lib.rs
docs/superpowers/specs/: 2026-07-12-pdfboss-design.md  2026-07-13-pdfboss-performance.md  2026-07-14-pdfboss-glyph-painting-design.md
python/pdfboss/: __init__.py  _pdfboss.pyi
tests/: conftest.py  test_pdfboss.py  test_release_meta.py
