[workspace]
resolver = "2"
members = [
    "crates/pdfboss-core",
    "crates/pdfboss-text",
    "crates/pdfboss-encoding",
    "crates/pdfboss-render",
    "crates/pdfboss-cli",
    "crates/pdfboss-py",
    "crates/pdfboss-testkit",
]

[workspace.package]
version = "0.1.0" # x-release-please-version
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4thel00z/pdfboss"

[workspace.dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Release builds trade compile time for cross-crate inlining and tighter
# codegen on the CPU-bound parse/raster paths. `panic` is deliberately left as
# "unwind": the Python extension relies on unwinding to turn Rust panics into
# Python exceptions rather than aborting the interpreter.
[profile.release]
lto = "thin"
codegen-units = 1
