[package]
name = "pdfboss-core"
description = "PDF syntax, objects, filters, cross-references and document model (ISO 32000)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
# Pure-Rust zlib-rs inflate backend: faster than the default miniz_oxide
# backend and still C-free (keeps the dependency tree free of native code).
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
memchr = "2"

[dev-dependencies]
pdfboss-testkit = { path = "../pdfboss-testkit" }
criterion = { workspace = true }

[[bench]]
name = "parse"
harness = false
