[package]
name = "pdfboss-render"
description = "Page rasterization to RGBA pixmaps and PNG for pdfboss"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pdfboss-core = { path = "../pdfboss-core" }
pdfboss-encoding = { path = "../pdfboss-encoding" }
png = "0.18"
jpeg-decoder = "0.3"

[features]
# Bundles the OFL Croscore substitute faces (Arimo/Tinos/Cousine) into the
# binary via `include_bytes!`, so `SubstituteSource::Builtin` has faces to
# hand out without a `--font-dir`. Adds ~4 MB to the binary; off by default.
substitute-fonts = []

[dev-dependencies]
pdfboss-testkit = { path = "../pdfboss-testkit" }
criterion = { workspace = true }

[[bench]]
name = "render"
harness = false

[[bench]]
name = "tiers"
harness = false
