[package]
name = "pdfboss-text"
description = "Font loading, encodings, ToUnicode CMaps and text extraction for pdfboss"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pdfboss-core = { path = "../pdfboss-core" }
pdfboss-encoding = { path = "../pdfboss-encoding" }

[dev-dependencies]
pdfboss-testkit = { path = "../pdfboss-testkit" }
criterion = { workspace = true }

[[bench]]
name = "extract"
harness = false
